[package]
name = "sapter"
version = "0.1.14"
description = "Minesweeper for terminals"
license = "MIT"
edition = "2021"
repository = "https://github.com/finalclass/sapter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ruscii = "0.3.2"
